--- a/manuscripts/references.bib
+++ b/manuscripts/references.bib
@@ -1,56 +1,208 @@
 
-@article{abadie2021,
-	title = {Using {Synthetic} {Controls}: {Feasibility}, {Data} {Requirements}, and {Methodological} {Aspects}},
-	volume = {59},
-	issn = {0022-0515},
-	shorttitle = {Using {Synthetic} {Controls}},
-	url = {https://www.aeaweb.org/articles?id=10.1257/jel.20191450},
-	doi = {10.1257/jel.20191450},
-	abstract = {Probably because of their interpretability and transparent nature, synthetic controls have become widely applied in empirical research in economics and the social sciences. This article aims to provide practical guidance to researchers employing synthetic control methods. The article starts with an overview and an introduction to synthetic control estimation. The main sections discuss the advantages of the synthetic control framework as a research design, and describe the settings where synthetic controls provide reliable estimates and those where they may fail. The article closes with a discussion of recent extensions, related methods, and avenues for future research.},
-	language = {en},
-	number = {2},
-	urldate = {2022-08-10},
-	journal = {Journal of Economic Literature},
-	author = {Abadie, Alberto},
-	month = jun,
-	year = {2021},
-	keywords = {Aggregate Productivity, Cross-Country Output Convergence, Diffusion Processes, Dynamic Quantile Regressions, Dynamic Treatment Effect Models, Economic Methodology, Multiple or Simultaneous Equation Models: Time-Series Models, State Space Models, Quantitative Policy Modeling, Macroeconomics: Production, Economic Integration, Empirical Studies of Economic Growth},
-	pages = {391--425},
-	file = {Full Text PDF:/Users/mpl48/Zotero/storage/HAMB66SS/Abadie - 2021 - Using Synthetic Controls Feasibility, Data Requir.pdf:application/pdf;Snapshot:/Users/mpl48/Zotero/storage/6CQWN3LF/articles.html:text/html},
+@article{abrams2020,
+  title = {{{COVID-19}} and the Impact of Social Determinants of Health},
+  author = {Abrams, Elissa M and Szefler, Stanley J},
+  date = {2020-07},
+  journaltitle = {The Lancet. Respiratory Medicine},
+  shortjournal = {Lancet Respir Med},
+  volume = {8},
+  number = {7},
+  eprint = {32437646},
+  eprinttype = {pmid},
+  pages = {659--661},
+  issn = {2213-2600},
+  doi = {10.1016/S2213-2600(20)30234-4},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7234789/},
+  urldate = {2022-09-08},
+  pmcid = {PMC7234789},
+  file = {/Users/mpl48/Zotero/storage/KNI9W82V/Abrams and Szefler - 2020 - COVID-19 and the impact of social determinants of .pdf}
 }
 
-@article{coley2021,
-	title = {Expression of {Concern} {About}: {Trends} in {Mental} {Health} {Symptoms}, {Service} {Use}, and {Unmet} {Need} for {Services} among {US} {Adults} through the {First} {Nine} {Months} of the {COVID}-19 {Pandemic}},
-	volume = {11},
-	issn = {1869-6716},
-	shorttitle = {Expression of {Concern} {About}},
-	url = {https://doi.org/10.1093/tbm/ibab082},
-	doi = {10.1093/tbm/ibab082},
-	abstract = {Upon initial publication, it was noticed there was a coding error in the manuscript that significantly alters the outcomes of this paper. The coding has been revised by the authors and the updated findings are currently under review. A revised paper is forthcoming.},
-	number = {10},
-	urldate = {2022-08-21},
-	journal = {Translational Behavioral Medicine},
-	author = {Coley, Rebekah Levine and Baum, Christopher F},
-	month = oct,
-	year = {2021},
-	pages = {1963},
-	file = {Full Text PDF:/Users/mpl48/Zotero/storage/JFMFARNL/Coley and Baum - 2021 - Expression of Concern About Trends in Mental Heal.pdf:application/pdf;Snapshot:/Users/mpl48/Zotero/storage/UZ7C6J9N/6296173.html:text/html},
+@online{artiga2018,
+  title = {Beyond {{Health Care}}: {{The Role}} of {{Social Determinants}} in {{Promoting Health}} and {{Health Equity}}},
+  shorttitle = {Beyond {{Health Care}}},
+  author = {Artiga, Samantha and Hinton, Elizabeth},
+  date = {2018-05-10T20:29:06+00:00},
+  url = {https://www.kff.org/racial-equity-and-health-policy/issue-brief/beyond-health-care-the-role-of-social-determinants-in-promoting-health-and-health-equity/},
+  urldate = {2022-09-08},
+  abstract = {Research demonstrates that improving population health and achieving health equity will require broad approaches that address social, economic, and environmental factors that influence health. This…},
+  langid = {american},
+  organization = {{KFF}},
+  file = {/Users/mpl48/Zotero/storage/4WMWZTHF/beyond-health-care-the-role-of-social-determinants-in-promoting-health-and-health-equity.html}
 }
 
 @article{bryant2022,
-	title = {Hunger relief: {A} natural experiment from additional {SNAP} benefits during the {COVID}-19 pandemic},
-	volume = {10},
-	issn = {2667193X},
-	shorttitle = {Hunger relief},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S2667193X22000412},
-	doi = {10.1016/j.lana.2022.100224},
-	abstract = {Background COVID-19 has directly affected millions of people. Others have been indirectly affected; for example, there has been a startling increase in hunger brought about by the pandemic. Many countries have sought to relieve this problem through public policy. This research examines the effectiveness of enhanced Supplemental Nutrition Assistance Program (SNAP) beneﬁts in the U.S. to alleviate hunger.},
-	language = {en},
-	urldate = {2022-08-21},
-	journal = {The Lancet Regional Health - Americas},
-	author = {Bryant, Andrew and Follett, Lendie},
-	month = jun,
-	year = {2022},
-	pages = {100224},
-	file = {Bryant and Follett - 2022 - Hunger relief A natural experiment from additiona.pdf:/Users/mpl48/Zotero/storage/2S38FWT9/Bryant and Follett - 2022 - Hunger relief A natural experiment from additiona.pdf:application/pdf},
+  title = {Hunger Relief: {{A}} Natural Experiment from Additional {{SNAP}} Benefits during the {{COVID-19}} Pandemic},
+  shorttitle = {Hunger Relief},
+  author = {Bryant, Andrew and Follett, Lendie},
+  date = {2022-06},
+  journaltitle = {The Lancet Regional Health - Americas},
+  shortjournal = {The Lancet Regional Health - Americas},
+  volume = {10},
+  pages = {100224},
+  issn = {2667193X},
+  doi = {10.1016/j.lana.2022.100224},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S2667193X22000412},
+  urldate = {2022-08-21},
+  abstract = {Background COVID-19 has directly affected millions of people. Others have been indirectly affected; for example, there has been a startling increase in hunger brought about by the pandemic. Many countries have sought to relieve this problem through public policy. This research examines the effectiveness of enhanced Supplemental Nutrition Assistance Program (SNAP) benefits in the U.S. to alleviate hunger.},
+  langid = {english},
+  file = {/Users/mpl48/Zotero/storage/2S38FWT9/Bryant and Follett - 2022 - Hunger relief A natural experiment from additiona.pdf}
 }
+
+@online{cuellar2020,
+  type = {legislation},
+  title = {Text - {{H}}.{{R}}.133 - 116th {{Congress}} (2019-2020): {{Consolidated Appropriations Act}}, 2021},
+  shorttitle = {Text - {{H}}.{{R}}.133 - 116th {{Congress}} (2019-2020)},
+  author = {Cuellar, Henry},
+  date = {2020-12-27},
+  url = {http://www.congress.gov/},
+  urldate = {2022-09-09},
+  abstract = {Text for H.R.133 - 116th Congress (2019-2020): Consolidated Appropriations Act, 2021},
+  langid = {english},
+  file = {/Users/mpl48/Zotero/storage/7NGJQV82/text.html}
+}
+
+@article{cutler2022,
+  title = {The {{Costs}} of {{Long COVID}}},
+  author = {Cutler, David M.},
+  date = {2022-05-12},
+  journaltitle = {JAMA Health Forum},
+  shortjournal = {JAMA Health Forum},
+  volume = {3},
+  number = {5},
+  pages = {e221809},
+  issn = {2689-0186},
+  doi = {10.1001/jamahealthforum.2022.1809},
+  url = {https://jamanetwork.com/journals/jama-health-forum/fullarticle/2792505},
+  urldate = {2022-09-07},
+  langid = {english},
+  file = {/Users/mpl48/Zotero/storage/E7736W6M/Cutler - 2022 - The Costs of Long COVID.pdf}
+}
+
+@misc{feedingamerica2021,
+  title = {The {{Impact}} of the {{Coronavirus}} on {{Local Food Insecurity}} in 2020 \& 2021},
+  author = {Feeding America},
+  date = {2021-03-31},
+  url = {https://www.feedingamerica.org/sites/default/files/2021-03/Local%20Projections%20Brief_3.31.2021.pdf},
+  urldate = {2022-09-08},
+  file = {/Users/mpl48/Zotero/storage/4LXQCI6N/Local Projections Brief_3.31.2021.pdf}
+}
+
+@article{gundersen2015,
+  title = {Food {{Insecurity And Health Outcomes}}},
+  author = {Gundersen, Craig and Ziliak, James P.},
+  date = {2015-11},
+  journaltitle = {Health Affairs},
+  volume = {34},
+  number = {11},
+  pages = {1830--1839},
+  publisher = {{Health Affairs}},
+  issn = {0278-2715},
+  doi = {10.1377/hlthaff.2015.0645},
+  url = {https://www.healthaffairs.org/doi/full/10.1377/hlthaff.2015.0645},
+  urldate = {2022-09-08},
+  abstract = {Almost fifty million people are food insecure in the United States, which makes food insecurity one of the nation’s leading health and nutrition issues. We examine recent research evidence of the health consequences of food insecurity for children, nonsenior adults, and seniors in the United States. For context, we first provide an overview of how food insecurity is measured in the country, followed by a presentation of recent trends in the prevalence of food insecurity. Then we present a survey of selected recent research that examined the association between food insecurity and health outcomes. We show that the literature has consistently found food insecurity to be negatively associated with health. For example, after confounding risk factors were controlled for, studies found that food-insecure children are at least twice as likely to report being in fair or poor health and at least 1.4 times more likely to have asthma, compared to food-secure children; and food-insecure seniors have limitations in activities of daily living comparable to those of food-secure seniors fourteen years older. The Supplemental Nutrition Assistance Program (SNAP) substantially reduces the prevalence of food insecurity and thus is critical to reducing negative health outcomes.},
+  file = {/Users/mpl48/Zotero/storage/4L8G9VLV/Gundersen and Ziliak - 2015 - Food Insecurity And Health Outcomes.pdf}
+}
+
+@article{heflin2019,
+  title = {{{SNAP}} Benefits and Childhood Asthma},
+  author = {Heflin, Colleen and Arteaga, Irma and Hodges, Leslie and Ndashiyme, Jean Felix and Rabbitt, Matthew P.},
+  date = {2019-01},
+  journaltitle = {Social Science \& Medicine (1982)},
+  shortjournal = {Soc Sci Med},
+  volume = {220},
+  eprint = {30453112},
+  eprinttype = {pmid},
+  pages = {203--211},
+  issn = {1873-5347},
+  doi = {10.1016/j.socscimed.2018.11.001},
+  abstract = {Anecdotal and descriptive evidence has led to the claim that some low-income households may face a "eat or breathe" tradeoff, but quantitative evidence is scarce. We link Medicaid claims data to monthly Supplemental Nutritional Assistance Program (SNAP) participation data from the state of Missouri from 2010 to 2013 to explore monthly patterns in children's emergency room (ER) claims for asthma and to examine whether these patterns are sensitive to the timing and amount of SNAP benefits. This allows us to empirically test whether SNAP households with Medicaid insurance face trade-offs between food and medicine that increases the likelihood that a child in a SNAP and Medicaid household will go to the ER for asthma at the end of the month. While we do not find overwhelming evidence that the timing of SNAP benefits receipt are associated with the timing of asthma-related ER visits, we do find clear evidence that increased SNAP benefits are associated with a reduction in the overall probability of an asthma-related ER visit.},
+  langid = {english},
+  keywords = {Adolescent,Asthma,Child,Child; Preschool,Emergency Service; Hospital,Female,Food Assistance,Food insecurity,Food stamps,Food Supply,Humans,Infant,Infant; Newborn,Male,Medicaid,Missouri,Nutrition Surveys,Poverty,United States},
+  file = {/Users/mpl48/Zotero/storage/9DL62JKP/Heflin et al. - 2019 - SNAP benefits and childhood asthma.pdf}
+}
+
+@article{heflin2019a,
+  title = {The {{Effect Of The Supplemental Nutrition Assistance Program On Mortality}}},
+  author = {Heflin, Colleen M. and Ingram, Samuel J. and Ziliak, James P.},
+  date = {2019-11},
+  journaltitle = {Health Affairs},
+  volume = {38},
+  number = {11},
+  pages = {1807--1815},
+  publisher = {{Health Affairs}},
+  issn = {0278-2715},
+  doi = {10.1377/hlthaff.2019.00405},
+  url = {https://www.healthaffairs.org/doi/10.1377/hlthaff.2019.00405},
+  urldate = {2022-09-07},
+  abstract = {The Supplemental Nutrition Assistance Program (SNAP) is the largest food assistance program in the United States. Although participation in it has been shown to reduce food insecurity, there is comparatively less clear causal evidence of positive health effects of participation, particularly among adults. We examined the relationship between SNAP participation and premature mortality using data for 1997–2009 from the National Health Interview Survey, linked to data for 1999–2011 from the National Death Index. Results from bivariate probit models found that participation in SNAP led to a populationwide reduction of 1–2 percentage points in mortality from all causes and a reduction in specific causes of death among people ages~40–64.}
+}
+
+@online{lowey2020,
+  type = {legislation},
+  title = {Text - {{H}}.{{R}}.6201 - 116th {{Congress}} (2019-2020): {{Families First Coronavirus Response Act}}},
+  shorttitle = {Text - {{H}}.{{R}}.6201 - 116th {{Congress}} (2019-2020)},
+  author = {Lowey, Nita M.},
+  date = {2020-03-18},
+  url = {http://www.congress.gov/},
+  urldate = {2022-09-09},
+  abstract = {Text for H.R.6201 - 116th Congress (2019-2020): Families First Coronavirus Response Act},
+  langid = {english}
+}
+
+@article{ratcliffe2011,
+  title = {How {{Much Does}} the {{Supplemental Nutrition Assistance Program Reduce Food Insecurity}}?},
+  author = {Ratcliffe, Caroline and McKernan, Signe-Mary and Zhang, Sisi},
+  date = {2011},
+  journaltitle = {American Journal of Agricultural Economics},
+  volume = {93},
+  number = {4},
+  pages = {1082--1098},
+  issn = {1467-8276},
+  doi = {10.1093/ajae/aar026},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1093/ajae/aar026},
+  urldate = {2022-09-08},
+  abstract = {Nearly 15\% of all U.S. households and 40\% of near-poor households were food insecure in 2009. The Supplemental Nutrition Assistance Program (SNAP) is the cornerstone of federal food assistance programs and serves as the first line of defense against food-related hardship. This paper measures the effectiveness of SNAP in reducing food insecurity using an instrumental variables approach to control for selection. Our results suggest that receipt of SNAP benefits reduces the likelihood of being food insecure by roughly 30\% and reduces the likelihood of being very food insecure by 20\%.},
+  langid = {english},
+  keywords = {food insecure,food insufficient,food stamps,instrumental variables,selection bias,SNAP},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1093/ajae/aar026},
+  file = {/Users/mpl48/Zotero/storage/75IRSBDW/Ratcliffe et al. - 2011 - How Much Does the Supplemental Nutrition Assistanc.pdf;/Users/mpl48/Zotero/storage/IBZYCLJW/aar026.html}
+}
+
+@article{schanzenbach2020,
+  title = {How {{Much Has Food Insecurity Risen}}? {{Evidence}} from the {{Census Household Pulse Survey}}},
+  author = {Schanzenbach, Diane and Pitts, Abigail},
+  date = {2020},
+  journaltitle = {Institute for Policy Research Rapid Research Report},
+  url = {https://www.ipr.northwestern.edu/documents/reports/ipr-rapid-research-reports-pulse-hh-data-10-june-2020.pdf}
+}
+
+@article{turner-musa2020,
+  title = {Examining {{Social Determinants}} of {{Health}}, {{Stigma}}, and {{COVID-19 Disparities}}},
+  author = {Turner-Musa, Jocelyn and Ajayi, Oluwatoyin and Kemp, Layschel},
+  date = {2020-06},
+  journaltitle = {Healthcare},
+  volume = {8},
+  number = {2},
+  pages = {168},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {2227-9032},
+  doi = {10.3390/healthcare8020168},
+  url = {https://www.mdpi.com/2227-9032/8/2/168},
+  urldate = {2022-09-08},
+  abstract = {There is growing attention to disparities in the incidence, prevalence, and mortality associated with COVID-19 (Coronavirus disease 2019) in racial/ethnic communities. The conditions leading to these disparities may be a function of social determinants of health and stigma linked to the disease. It is important to examine how these factors may be implicated in COVID-19 onset, treatment, and outcomes. A brief overview of these issues allows for a cursory examination of the role of social determinants of health and stigma in COVID-19. Consideration is given to how understanding COVID-19 in the context of social determinants and stigma may be included in interventions to mitigate its transmission within vulnerable populations.},
+  issue = {2},
+  langid = {english},
+  keywords = {COVID-19,health disparities,race/ethnicity,social determinants of health,stigma},
+  file = {/Users/mpl48/Zotero/storage/AQKPS6YZ/Turner-Musa et al. - 2020 - Examining Social Determinants of Health, Stigma, a.pdf;/Users/mpl48/Zotero/storage/R6S2N6YT/htm.html}
+}
+
+@misc{usdepartmentofhealthandhumanservicesofficeofdiseasepreventionandhealthpromotion,
+  title = {Healthy {{People}} 2030},
+  author = {US Department of Health {and} Human Services Office of Disease Prevention {and} Health Promotion},
+  url = {https://health.gov/healthypeople},
+  urldate = {2022-09-08}
+}
+
+
