--- a/code/run_project.Rmd
+++ b/code/run_project.Rmd
@@ -7,15 +7,21 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(here)
+dir.create(here("trunk"),showWarnings = F)
+dir.create(here("trunk","raw"),showWarnings = F)
+dir.create(here("trunk","derived"),showWarnings = F)
+dir.create(here("trunk","analysis"),showWarnings = F)
 ```
+
 #Load Data----
 ```{r load data, include=FALSE}
 source(here("code","load data","hps","load_hps.R"), local = knitr::knit_global())
-# purpose: script reads in HHP data, aggregates and writes two dfs
+# purpose: reads in HPS data, and aggregates into two dfs
 # source: https://www2.census.gov/programs-surveys/demo/datasets/hhp
 # output: here("trunk","derived","Standard Files","Household Pulse Survey Data Tables","puf.txt")
 #         here("trunk","derived","Standard Files","Household Pulse Survey Data Tables","repwgt.txt")
-# a list of raw files for weights and data in:
+# a list of raw survey-level files for weights and data in:
 #         here("trunk","raw","Household Pulse Survey Data Tables","puf")
 #         here("trunk","raw","Household Pulse Survey Data Tables","repwgt")
 
@@ -33,6 +39,16 @@ source(here("code","load data","covid","hospital_impacts.R"), local = knitr::kni
 # purpose: collects state data on impacts on hospitals
 # source: https://data.cdc.gov/Case-Surveillance/United-States-COVID-19-Cases-and-Deaths-by-State-o/9mfq-cb36/data
 # output: https://healthdata.gov/Hospital/COVID-19-Reported-Patient-Impact-and-Hospital-Capa/g62h-syeh
+
+source(here("code","load data","covid","hospital_impacts.R"), local = knitr::knit_global())
+# purpose: collects july 1st population estimates for 2020 and 2021
+# source: https://www.census.gov/data/tables/time-series/demo/popest/2020s-state-total.html
+# output: here("trunk","raw","PEP","pep.txt")
+
+source(here("code","load data","ea","write_ea.R"), local = knitr::knit_global())
+# purpose: creates .csv of monthly opt ins for Emergency Allotments
+# source: 
+# output: 
 ```
 
 #Create Datasets----
@@ -40,7 +56,7 @@ source(here("code","load data","covid","hospital_impacts.R"), local = knitr::kni
 source(here("code","create datasets","fps_hps.R"), local = knitr::knit_global())
 # purpose: reads in raw hps data and subsets to needed columns
 # source: https://www2.census.gov/programs-surveys/demo/datasets/hhp
-# output: here("trunk","derived","Gold Files","Household Pulse Survey Data Tables","hhp_final.txt")
+# output: here("trunk","derived","Gold Files","Household Pulse Survey Data Tables","hps_final.txt")
 ```
 
 #Create Figures----
